--- a/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-768dim-80m-parameters.yaml
+++ b/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-768dim-80m-parameters.yaml
@@ -44,7 +44,7 @@ model:
 
 
 # Loading
-starting_checkpoint_load_path:      # Fill this in with the checkpoint from the end of pretraining
+starting_checkpoint_load_path: model.pt    # Fill this in with the checkpoint from the end of pretraining
 local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 
 # When starting from mnli
