--- a/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-768dim-80m-parameters.yaml
+++ b/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-768dim-80m-parameters.yaml
@@ -52,7 +52,7 @@ local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 # starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
 
 # Saving
-save_finetune_checkpoint_prefix: ./version3/ # (local)
+save_finetune_checkpoint_prefix: ./version4/ # (local)
 # save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
 save_finetune_checkpoint_folder: ${save_finetune_checkpoint_prefix}/${base_run_name}
 overwrite: True
@@ -100,6 +100,69 @@ tasks:
       # We keep one MNLI checkpoint locally so that we can start finetuning of
       # RTE, MRPC and STS-B from the MNLI checkpoint
       save_num_checkpoints_to_keep: 1
+      max_sequence_length: 512
+      wd: 5e-6
+      lr: 5e-5
+  mnli:
+    # Specify any extra task-specific arguments for the trainer here
+    trainer_kwargs:
+      # We keep one MNLI checkpoint locally so that we can start finetuning of
+      # RTE, MRPC and STS-B from the MNLI checkpoint
+      save_num_checkpoints_to_keep: 1
+      max_sequence_length: 512
+      wd: 5e-6
+      lr: 5e-5
+  rte:
+    seeds: [19, 8364, 717, 10536, 90166]
+    trainer_kwargs:
+      save_num_checkpoints_to_keep: 0
+      max_sequence_length: 512
+      optim_name: adamw
+      max_duration: 6ep
+      wd: 0.01
+      lr: 5e-5
+  qqp:
+    trainer_kwargs:
+      save_num_checkpoints_to_keep: 0
+      max_sequence_length: 512
+      optim_name: adamw
+      wd: 0.01
+      lr: 3e-5
+      max_duration: 10ep
+  qnli:
+    trainer_kwargs:
+      save_num_checkpoints_to_keep: 0
+      max_sequence_length: 512
+      wd: 1e-6
+      lr: 5e-5
+      pool_all: True # average pooling
+  sst2:
+    seeds: [19, 8364, 717]
+    trainer_kwargs:
+      save_num_checkpoints_to_keep: 0
+      max_sequence_length: 512
+      wd: 3e-6
+      lr: 3e-5
+  stsb:
+    seeds: [19, 8364, 717, 10536, 90166]
+    trainer_kwargs:
+      save_num_checkpoints_to_keep: 0
+      max_sequence_length: 512
+      optim_name: adamw
+      wd: 0.01
+      lr: 7e-5
+  mrpc:
+    seeds: [19, 8364, 717, 10536, 90166]
+    trainer_kwargs:
+      save_num_checkpoints_to_keep: 0
+      max_sequence_length: 512
+      optim_name: adamw
+      wd: 0.01
+      lr: 5e-5
+  cola:
+    seeds: [19, 8364, 717, 10536]
+    trainer_kwargs:
+      save_num_checkpoints_to_keep: 0
       max_sequence_length: 512
       wd: 5e-6
       lr: 5e-5
