--- a/bert/yamls/long_context/m2-dim1536-mimiciii.yaml
+++ b/bert/yamls/long_context/m2-dim1536-mimiciii.yaml
@@ -15,7 +15,8 @@ tokenizer_name: bert-base-uncased
 max_seq_len: 128
 precision: amp_bf16
 
-task_name: 'mimic'
+#task_name: 'mimic'
+task_name: 'contract_nli'
 
 # (Optionally) provide a composer checkpoint to use for the starting weights
 #load_path: ./local-bert-checkpoints/alt-hyena-lc-resid-bd-mlp-glu-pretrain-c4-w10-ord128-mlm30-lr8e-4-dim1536-bf16-rerun/ep0-ba70000-rank0.pt
