--- a/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-960dim-parameter-matched.yaml
+++ b/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-960dim-parameter-matched.yaml
@@ -36,10 +36,10 @@ eval_loader:
   num_workers: 8
 
 # Optimization
-scheduler:
-  name: linear_decay_with_warmup
-  t_warmup: 0.06dur # Warmup to the full LR for 6% of the training duration
-  alpha_f: 0.02 # Linearly decay to 0.02x the full LR by the end of the training duration
+#scheduler:
+#  name: linear_decay_with_warmup
+#  t_warmup: 0.06dur # Warmup to the full LR for 6% of the training duration
+#  alpha_f: 0.02 # Linearly decay to 0.02x the full LR by the end of the training duration
 
 optimizer:
   name: decoupled_adamw
