--- a/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-960dim-parameter-matched.yaml
+++ b/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-960dim-parameter-matched.yaml
@@ -73,7 +73,8 @@ task_name: 'contract_nli'
 
 # Base model config
 model:
-  name: bert
+  #name: bert
+  name: mosaic_bert
   pretrained_model_name: ${tokenizer_name}
   tokenizer_name: ${tokenizer_name}
   model_config:
