--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -63,9 +63,9 @@ log_to_console: true
 console_log_interval: 10ba
 
 #task_name: 'mimic'
-task_name: ecthr
-#task_name: 'contract_nli'
-num_labels: 10
+#task_name: ecthr
+task_name: 'contract_nli'
+num_labels: 3
 
 #################################################
 
