--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -66,6 +66,7 @@ console_log_interval: 10ba
 #task_name: ecthr
 task_name: 'contract_nli'
 num_labels: 3
+problem_type: single_label_classification #multi_label_classification
 
 #################################################
 
@@ -76,7 +77,7 @@ model:
   pretrained_model_name: ${tokenizer_name}
   tokenizer_name: ${tokenizer_name}
   model_config:
-    problem_type: multi_label_classification
+    problem_type: ${problem_type}
     num_labels: ${num_labels}
     num_attention_heads: 12 
     num_hidden_layers: 12 
