--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -83,8 +83,10 @@ model:
     num_hidden_layers: 12 
     attention_probs_dropout_prob: 0.0 
     max_position_embeddings: 128
-    hidden_size: 960
-    intermediate_size: 3840
+    #hidden_size: 960
+    #intermediate_size: 3840
+    hidden_size: 768
+    intermediate_size: 3072
 
     monarch_mixer_sequence_mixing: True
     long_conv_l_max: 128
@@ -104,7 +106,8 @@ model:
     use_positional_encodings: True
 
 # Loading
-starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt     # Fill this in with the checkpoint from the end of pretraining
+#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
+starting_checkpoint_load_path: ./local-bert-checkpoints/M2-80M/model.pt
 local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 
 # When starting from mnli
