--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -62,9 +62,9 @@ progress_bar: false
 log_to_console: true
 console_log_interval: 10ba
 
-#task_name: 'mimic'
+task_name: 'mimic'
 #task_name: ecthr
-task_name: 'contract_nli'
+#task_name: 'contract_nli'
 num_labels: 3
 problem_type: single_label_classification #multi_label_classification
 
