--- a/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-960dim-parameter-matched.yaml
+++ b/bert/yamls/finetune-glue/monarch-mixer-finetune-glue-960dim-parameter-matched.yaml
@@ -23,8 +23,8 @@ model:
     num_hidden_layers: 12 
     attention_probs_dropout_prob: 0.0 
     max_position_embeddings: 128
-    hidden_size: 960
-    intermediate_size: 3840
+    hidden_size: 960 #960
+    intermediate_size: 6144 #3840
 
     monarch_mixer_sequence_mixing: True
     long_conv_l_max: 128
@@ -44,7 +44,7 @@ model:
     use_positional_encodings: True
 
 # Loading
-starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
+starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/model.pt
 local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 
 # When starting from mnli
@@ -52,7 +52,7 @@ local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 # starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
 
 # Saving
-save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-110/ # (local)
+save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-260M/ # (local)
 # save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
 save_finetune_checkpoint_folder: ${save_finetune_checkpoint_prefix}/${base_run_name}
 
@@ -75,6 +75,24 @@ scheduler:
 
 # Task configuration
 tasks:
+  20news:
+    # Specify any extra task-specific arguments for the trainer here
+    trainer_kwargs:
+      # We keep one MNLI checkpoint locally so that we can start finetuning of
+      # RTE, MRPC and STS-B from the MNLI checkpoint
+      save_num_checkpoints_to_keep: 1
+      max_sequence_length: 512
+      wd: 5e-6
+      lr: 5e-5
+  contract_nli:
+    # Specify any extra task-specific arguments for the trainer here
+    trainer_kwargs:
+      # We keep one MNLI checkpoint locally so that we can start finetuning of
+      # RTE, MRPC and STS-B from the MNLI checkpoint
+      save_num_checkpoints_to_keep: 1
+      max_sequence_length: 512
+      wd: 5e-6
+      lr: 5e-5
   mnli:
     # Specify any extra task-specific arguments for the trainer here
     trainer_kwargs:
