--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -62,10 +62,10 @@ progress_bar: false
 log_to_console: true
 console_log_interval: 10ba
 
-#task_name: 'mimic'
-task_name: ecthr
+task_name: 'mimic'
+#task_name: ecthr
 #task_name: 'contract_nli'
-num_labels: 10
+num_labels: 50
 problem_type: multi_label_classification #multi_label_classification
 
 #################################################
