--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -62,10 +62,10 @@ progress_bar: false
 log_to_console: true
 console_log_interval: 10ba
 
-#task_name: 'mimic'
-task_name: ecthr
+task_name: 'mimic'
+#task_name: ecthr
 #task_name: 'contract_nli'
-num_labels: 10
+num_labels: 50
 problem_type: multi_label_classification #multi_label_classification
 
 #################################################
@@ -85,10 +85,10 @@ model:
     max_position_embeddings: 128
     #hidden_size: 960
     #intermediate_size: 3840
-    #hidden_size: 1536
-    #intermediate_size: 6144
-    hidden_size: 1792
-    intermediate_size: 7168
+    hidden_size: 1536
+    intermediate_size: 6144
+    #hidden_size: 1792
+    #intermediate_size: 7168
 
     monarch_mixer_sequence_mixing: True
     long_conv_l_max: 128
@@ -110,8 +110,8 @@ model:
 # Loading
 #starting_checkpoint_load_path: ./local-bert-checkpoints/M2-80M/model.pt
 #starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/model.pt
-starting_checkpoint_load_path: ./local-bert-checkpoints/M2-341M/model.pt
+starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/model.pt
+#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-341M/model.pt
 local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 
 # When starting from mnli
@@ -119,7 +119,7 @@ local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
 # starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
 
 # Saving
-save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-341M/ # (local)
+save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-260M/ # (local)
 # save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
 save_finetune_checkpoint_folder: ${save_finetune_checkpoint_prefix}/${base_run_name}
 
