--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -52,6 +52,17 @@ max_duration: 10ep
 eval_interval: 1ep
 global_train_batch_size: 16
 
+# (Optional) W&B logging
+loggers:
+  wandb: 
+    project: attention
+    entity: hazy-research
+
+# Callbacks
+callbacks:
+  lr_monitor: {}
+  speed_monitor: {}
+
 # System
 seed: 17
 device_eval_batch_size: 16
@@ -60,13 +71,31 @@ device_train_microbatch_size: 16
 # Logging
 progress_bar: false
 log_to_console: true
-console_log_interval: 10ba
+console_log_interval: 50ba
 
 task_name: 'mimic'
 #task_name: ecthr
 #task_name: 'contract_nli'
 num_labels: 50
 problem_type: multi_label_classification #multi_label_classification
+
+##########################################################
+
+# Loading
+#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-80M/model.pt
+starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
+#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/model.pt
+#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-341M/model.pt
+local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
+
+# When starting from mnli
+# local_pretrain_checkpoint_folder: ./local-finetune-checkpoints/{base_run_name}/task=mnli/seed=19/
+# starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
+
+# Saving
+save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-110M/ # (local)
+# save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
+save_finetune_checkpoint_folder: ${save_finetune_checkpoint_prefix}/${base_run_name}
 
 #################################################
 
@@ -79,6 +108,7 @@ model:
   model_config:
     problem_type: ${problem_type}
     num_labels: ${num_labels}
+    pretrained_checkpoint: ${starting_checkpoint_load_path}
     num_attention_heads: 12 
     num_hidden_layers: 12 
     attention_probs_dropout_prob: 0.0 
@@ -106,30 +136,3 @@ model:
     use_monarch_mlp: True
     monarch_mlp_nblocks: 4
     use_positional_encodings: True
-
-# Loading
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-80M/model.pt
-starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-341M/model.pt
-local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
-
-# When starting from mnli
-# local_pretrain_checkpoint_folder: ./local-finetune-checkpoints/{base_run_name}/task=mnli/seed=19/
-# starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
-
-# Saving
-save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/M2-110M/ # (local)
-# save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
-save_finetune_checkpoint_folder: ${save_finetune_checkpoint_prefix}/${base_run_name}
-
-# (Optional) W&B logging
-loggers:
-  wandb: 
-    project: attention
-    entity: hazy-research
-
-# Callbacks
-callbacks:
-  lr_monitor: {}
-  speed_monitor: {}
