--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -113,8 +113,11 @@ model:
     num_hidden_layers: 12 
     attention_probs_dropout_prob: 0.0 
     max_position_embeddings: 128
-    hidden_size: 960
-    intermediate_size: 3840
+    
+    hidden_size: 768
+    intermediate_size: 3072
+    #hidden_size: 960
+    #intermediate_size: 3840
     #hidden_size: 1536
     #intermediate_size: 6144
     #hidden_size: 1792
