--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -9,7 +9,7 @@ parallel: false
 base_run_name: monarch-mixer-finetune-glue-960dim-parameter-matched
 default_seed: 19
 precision: fp32 
-max_seq_len: 128
+max_seq_len: 512
 
 # Tokenizer for dataset creation
 tokenizer_name: bert-base-uncased
@@ -105,7 +105,7 @@ model:
   name: mosaic_bert
   pretrained_model_name: ${tokenizer_name}
   tokenizer_name: ${tokenizer_name}
-  #pretrained_checkpoint: ${starting_checkpoint_load_path}
+  pretrained_checkpoint: ${starting_checkpoint_load_path}
 
 
 
