--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -81,81 +81,11 @@ problem_type: multi_label_classification #multi_label_classification
 
 ##########################################################
 
-# Loading
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-80M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-110M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-260M/model.pt
-#starting_checkpoint_load_path: ./local-bert-checkpoints/M2-341M/model.pt
-local_pretrain_checkpoint_folder: ./local-bert-checkpoints/
-
-starting_checkpoint_load_path: bert-base-uncased
-
-# When starting from mnli
-# local_pretrain_checkpoint_folder: ./local-finetune-checkpoints/{base_run_name}/task=mnli/seed=19/
-# starting_checkpoint_load_path: ${local_pretrain_checkpoint_folder}/ep3-ba24546-rank0.pt
-
-# Saving
-save_finetune_checkpoint_prefix: ./local-finetune-checkpoints/bert_base_uncased/ # (local)
-# save_finetune_checkpoint_prefix: s3://<bucket>/remote-finetune-checkpoints # (remote)
-save_finetune_checkpoint_folder: ${save_finetune_checkpoint_prefix}/${base_run_name}
-
-#################################################
-
 # Base model config
 model:
   name: hf_bert
-  #name: hf_bert
-  #name: mosaic_bert
+  num_labels: ${num_labels} # <-- Make sure to update these after you modify the starter script!
+  use_pretrained: true
   pretrained_model_name: ${tokenizer_name}
   tokenizer_name: ${tokenizer_name}
-  pretrained_checkpoint: ${starting_checkpoint_load_path}
 
-
-
-
-
-
-
-
-  use_learnable_monarch: True
-  model_config:
-    use_learnable_monarch: True
-
-
-
-
-
-
-
-    problem_type: ${problem_type}
-    num_labels: ${num_labels}
-    num_attention_heads: 12 
-    num_hidden_layers: 12 
-    attention_probs_dropout_prob: 0.0 
-    max_position_embeddings: 128
-
-    #hidden_size: 768
-    #intermediate_size: 3072
-    hidden_size: 960
-    intermediate_size: 3840
-    #hidden_size: 1536
-    #intermediate_size: 6144
-    #hidden_size: 1792
-    #intermediate_size: 7168
-
-    monarch_mixer_sequence_mixing: True
-    long_conv_l_max: 128
-    long_conv_kernel_learning_rate: 1e-3
-    hyena_lr_pos_emb: 1e-5
-    hyena_w: 10
-    hyena_wd: 0.1
-    hyena_emb_dim: 5
-    hyena_filter_order: 128
-
-    bidirectional: true
-    residual_long_conv: true
-
-    use_glu_mlp: True
-    use_monarch_mlp: True
-    monarch_mlp_nblocks: 4
-    use_positional_encodings: True
