--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -89,4 +89,10 @@ model:
   pretrained_model_name: ${tokenizer_name}
   tokenizer_name: ${tokenizer_name}
   problem_type: multi_label_classification
+  model_config:
+    num_labels: ${num_labels} # <-- Make sure to update these after you modify the starter script!
+    use_pretrained: true
+    pretrained_model_name: ${tokenizer_name}
+    tokenizer_name: ${tokenizer_name}
+    problem_type: multi_label_classification
 
