--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -76,6 +76,7 @@ console_log_interval: 50ba
 #task_name: 'mimic'
 #task_name: ecthr
 task_name: 'contract_nli'
+#task_name: '20news'
 num_labels: 3
 problem_type: single_label_classification #multi_label_classification
 
