--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -74,11 +74,11 @@ log_to_console: true
 console_log_interval: 50ba
 
 #task_name: 'mimic'
-#task_name: ecthr
+task_name: ecthr
 #task_name: 'contract_nli'
-task_name: '20news'
-num_labels: 20
-problem_type: single_label_classification #multi_label_classification
+#task_name: '20news'
+num_labels: 10
+problem_type: multi_label_classification #multi_label_classification
 
 ##########################################################
 
