--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -79,6 +79,7 @@ task_name: 'mimic'
 #task_name: '20news'
 num_labels: 50
 problem_type: multi_label_classification #multi_label_classification
+save_folder: ./local-finetune-checkpoints/${tokenizer_name}
 
 ##########################################################
 
@@ -90,6 +91,7 @@ model:
   pretrained_model_name: ${tokenizer_name}
   tokenizer_name: ${tokenizer_name}
   problem_type: ${problem_type} #${problem_type}
+  save_folder: ${save_folder}
   save_num_checkpoints_to_keep: 10
   model_config:
     num_labels: ${num_labels} # <-- Make sure to update these after you modify the starter script!
