--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -95,6 +95,6 @@ model:
   save_num_checkpoints_to_keep: 10
   model_config:
     num_labels: ${num_labels} # <-- Make sure to update these after you modify the starter script!
-    problem_type: ${problem_type} #${problem_type}
-    max_position_embeddings: ${max_seq_len}
+    problem_type: multi_label_classification #${problem_type}
+    max_position_embeddings: 2048
 
