--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -9,10 +9,10 @@ parallel: false
 base_run_name: monarch-mixer-finetune-glue-960dim-parameter-matched
 default_seed: 19
 precision: fp32 
-max_seq_len: 2048 #512, 128
+max_seq_len: 512 #512, 128
 
 # Tokenizer for dataset creation
-tokenizer_name: roberta-base #bert-base-uncased
+tokenizer_name: bert-base-uncased #roberta-base #bert-base-uncased
 
 
 # Dataloaders (make sure to update these after you modify the starter script!)
@@ -74,11 +74,12 @@ log_to_console: true
 console_log_interval: 50ba
 
 #task_name: 'mimic'
-task_name: ecthr
+#task_name: ecthr
 #task_name: 'contract_nli'
 #task_name: '20news'
-num_labels: 10
-problem_type: multi_label_classification #multi_label_classification
+task_name: hyperpartisan
+num_labels: 5
+problem_type: single_label_classification #single_label_classification multi_label_classification
 save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}
 
 ##########################################################
@@ -96,5 +97,5 @@ model:
   model_config:
     num_labels: ${num_labels} # <-- Make sure to update these after you modify the starter script!
     problem_type: multi_label_classification #${problem_type}
-    max_position_embeddings: 2048
+    max_position_embeddings: ${max_seq_len}
 
