--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -80,7 +80,7 @@ console_log_interval: 50ba
 task_name: hyperpartisan
 num_labels: 2
 problem_type: single_label_classification #single_label_classification multi_label_classification
-save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}
+save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}/${lr}
 
 ##########################################################
 
