--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -35,12 +35,12 @@ eval_loader:
 # Optimization
 scheduler:
   name: linear_decay_with_warmup
-  t_warmup: 1ep #0.06dur # Warmup to the full LR for 6% of the training duration
+  t_warmup: 0.06dur #1ep # Warmup to the full LR for 6% of the training duration
   alpha_f: 0.02 # Linearly decay to 0.02x the full LR by the end of the training duration
 
 optimizer:
   name: decoupled_adamw
-  lr: 2.0e-5
+  lr: 1.0e-5
   betas:
   - 0.9
   - 0.98
