--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -12,7 +12,7 @@ precision: fp32
 max_seq_len: 512 #512, 128
 
 # Tokenizer for dataset creation
-tokenizer_name: roberta-base #roberta-base #bert-base-uncased
+tokenizer_name: bert-base-uncased #roberta-base #bert-base-uncased
 
 
 # Dataloaders (make sure to update these after you modify the starter script!)
@@ -35,12 +35,12 @@ eval_loader:
 # Optimization
 scheduler:
   name: linear_decay_with_warmup
-  t_warmup: 0ep #1ep # Warmup to the full LR for 6% of the training duration
+  t_warmup: 0ep #0.06dur #1ep # Warmup to the full LR for 6% of the training duration
   alpha_f: 0.02 # Linearly decay to 0.02x the full LR by the end of the training duration
 
 optimizer:
   name: decoupled_adamw
-  lr: 5.0e-5
+  lr: 2.0e-5
   betas:
   - 0.9
   - 0.98
