--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -6,13 +6,13 @@
 parallel: false
 
 # Basic run configuration, additional details will be added to this name for each GLUE task, and each random seed
-base_run_name: monarch-mixer-finetune-glue-960dim-parameter-matched
+base_run_name: vanilla-transformer-testing
 default_seed: 19
 precision: fp32 
 max_seq_len: 512 #512, 128
 
 # Tokenizer for dataset creation
-tokenizer_name: roberta-base #roberta-base #bert-base-uncased
+tokenizer_name: bert-base-uncased #roberta-base #bert-base-uncased
 
 
 # Dataloaders (make sure to update these after you modify the starter script!)
@@ -52,12 +52,6 @@ max_duration: 30ep
 eval_interval: 1ep
 global_train_batch_size: 16
 
-# (Optional) W&B logging
-loggers:
-  wandb: 
-    project: attention
-    entity: hazy-research
-
 # Callbacks
 callbacks:
   lr_monitor: {}
@@ -81,6 +75,13 @@ task_name: hyperpartisan
 num_labels: 2
 problem_type: single_label_classification #single_label_classification multi_label_classification
 save_folder: ./local-finetune-checkpoints/${tokenizer_name}/${max_seq_len}/${task_name}/${max_duration}
+
+# (Optional) W&B logging
+loggers:
+  wandb: 
+    project: attention
+    entity: hazy-research
+    name: ${tokenizer_name}-${max_seq_len}-${split}-${max_duration}-${lr}_LR-${name}-${t_warmup}-${alpha_f}-${task_name}-${problem_type}
 
 ##########################################################
 
