--- a/bert/yamls/finetune-glue/M2_SC_V1.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V1.yaml
@@ -24,8 +24,9 @@ train_loader:
   drop_last: true
   num_workers: 8
 
+split_for_testing: test
 eval_loader:
-  split: validation
+  split: ${split_for_testing}
   tokenizer_name: ${tokenizer_name}
   max_seq_len: ${max_seq_len}
   shuffle: true
@@ -33,14 +34,18 @@ eval_loader:
   num_workers: 8
 
 # Optimization
+scheduler_name: linear_decay_with_warmup
+t_warmup: 0.1dur
+alpha_f: 0.02
 scheduler:
-  name: linear_decay_with_warmup
-  t_warmup: 0.06dur # Warmup to the full LR for 6% of the training duration
-  alpha_f: 0.02 # Linearly decay to 0.02x the full LR by the end of the training duration
+  name: ${scheduler_name}
+  t_warmup: ${t_warmup} #0.06dur #1ep # Warmup to the full LR for 6% of the training duration
+  alpha_f: ${alpha_f} # Linearly decay to 0.02x the full LR by the end of the training duration
 
+learning_rate: 2.0e-5
 optimizer:
   name: decoupled_adamw
-  lr: 1.0e-5
+  lr: ${learning_rate}
   betas:
   - 0.9
   - 0.98
@@ -48,15 +53,9 @@ optimizer:
   weight_decay: 1.0e-6
 
 # Training duration and evaluation frequency
-max_duration: 15ep
+max_duration: 30ep
 eval_interval: 1ep
 global_train_batch_size: 16
-
-# (Optional) W&B logging
-loggers:
-  wandb: 
-    project: attention
-    entity: hazy-research
 
 # Callbacks
 callbacks:
@@ -79,6 +78,13 @@ task_name: ecthr
 num_labels: 10
 problem_type: multi_label_classification #multi_label_classification
 expand_positional_embeddings: True
+
+# (Optional) W&B logging
+loggers:
+  wandb: 
+    project: attention
+    entity: hazy-research
+    name: ${tokenizer_name}-${max_seq_len}-${split_for_testing}-${max_duration}-${learning_rate}_LR-${scheduler_name}-${t_warmup}-${alpha_f}-${task_name}-${problem_type}
 
 ##########################################################
 
