--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -12,7 +12,8 @@ precision: fp32
 max_seq_len: 512 #512, 128
 
 # Tokenizer for dataset creation
-tokenizer_name: bert-base-uncased #roberta-base #bert-base-uncased
+tokenizer_name: roberta-base #roberta-base #bert-base-uncased
+threshold: 0.5
 
 
 # Dataloaders (make sure to update these after you modify the starter script!)
@@ -86,7 +87,7 @@ loggers:
   wandb: 
     project: attention
     entity: hazy-research
-    name: ${tokenizer_name}-${max_seq_len}-${split_for_testing}-${max_duration}-${learning_rate}_LR-${scheduler_name}-${t_warmup}-${alpha_f}-${task_name}-${problem_type}
+    name: ${tokenizer_name}-${max_seq_len}-${split_for_testing}-${max_duration}-${learning_rate}_LR-${scheduler_name}-${t_warmup}-${alpha_f}-${task_name}-${problem_type}-${threshold}-threshold
 
 ##########################################################
 
