--- a/bert/yamls/finetune-glue/M2_SC_V2.yaml
+++ b/bert/yamls/finetune-glue/M2_SC_V2.yaml
@@ -12,7 +12,7 @@ precision: fp32
 max_seq_len: 512 #512, 128
 
 # Tokenizer for dataset creation
-tokenizer_name: roberta-base #roberta-base #bert-base-uncased
+tokenizer_name: bert-base-uncased #roberta-base #bert-base-uncased
 threshold: 0.5
 
 
